Improve event view and request count handling in services